adjusted the title on the home to page to resize on smaller devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -66,6 +66,14 @@ a {
   align-items: center;
 }
 
+/*Hero banner small*/
+
+.hero .jumbotron .title-small {
+  font-size: 40px;
+  line-height: 44px;
+  font-weight: 300;
+}
+
 /*projects*/
 
 .card {
