added new screen, worked in new image. need to add clients to page and a link to my cv

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,13 +41,13 @@ a {
   background-position: center center;
   height: 100vh;
 }
-
-.hero .jumbotron .display-3 {
+/*jumbotron used in footer and headers*/
+.jumbotron .display-3 {
   font-size: 60px;
   line-height: 80px;
 }
 
-.hero .jumbotron .lead {
+.jumbotron .lead {
   font-size: 19px;
   line-height: 32px;
   color: #9B9B9B;
@@ -66,20 +66,27 @@ a {
   align-items: center;
 }
 
+.jumbotron .lead a  {
+  color: #fff;
+  font-weight: 300;
+
+}
+
 /*Hero banner About*/
 
-.hero .jumbotron .about {
+.about-hero .jumbotron {
   background: url('../img/about_bg.jpg');
   background-size: cover;
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   background-position: center center;
-  height: 100vh;
+  max-height: 70vh;
+  margin-bottom: 30%;
 }
 
 /*Hero banner small*/
 
-.hero .jumbotron .title-small {
+.jumbotron .title-small {
   font-size: 40px;
   line-height: 44px;
   font-weight: 300;
@@ -120,11 +127,6 @@ a {
   font-weight: 300;
 }
 
-.footer .jumbotron .lead a  {
-  color: #fff;
-  font-weight: 300;
-
-}
 
 .footer {
   padding-top: 130px;
