--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,10 @@ a {
   background-color: #000b16;
 }
 
+/*project navbar*/
+
+
+
 /*Hero banner home*/
 
 .hero .jumbotron {
@@ -45,6 +49,7 @@ a {
 .jumbotron .display-3 {
   font-size: 60px;
   line-height: 80px;
+  color:#fff;
 }
 
 .jumbotron .lead {
@@ -72,6 +77,7 @@ a {
 
 }
 
+
 /*Hero banner About*/
 
 .about-hero .jumbotron {
@@ -84,12 +90,21 @@ a {
   margin-bottom: 30%;
 }
 
+.project-hero .jumbotron {
+  background: url('../img/home_bg.jpg');
+  background-size: cover;
+  /*background-attachment: fixed;*/
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 /*Hero banner small*/
 
 .jumbotron .title-small {
   font-size: 40px;
   line-height: 44px;
   font-weight: 300;
+  color: #fff;
 }
 
 /*projects*/
@@ -114,6 +129,12 @@ a {
   font-size: 18px;
   font-weight: 300;
   color: #fff;
+}
+
+/*carousel*/
+
+.carousel-item .full-width {
+  width: 100vw;
 }
 
 /*Footer*/
