--- a/archive/css/custom.css
+++ b/archive/css/custom.css
@@ -1,6 +1,7 @@
-/* GLOBAL */
+/*global*/
+
 body {
-    background-color: #03060b !important;
+    background-color: #000b16 !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,7 +15,12 @@ a {
   text-decoration: none;
 }
 
-/* NAVBAR */
+.sec-title {
+  font-weight: 300;
+  color: #fff;
+}
+
+/*navbar*/
 .navbar .navbar-brand {
   color: rgba(255, 255, 255, .85);
   font-size: 1rem;
@@ -22,59 +28,49 @@ a {
 }
 
 .navbar {
-  background-color: #03060b;
+  background-color: #000b16;
 }
 
+/*project navbar*/
 
-/* HERO BANNER */
 
-.home-hero .jumbotron {
-  background-color: #03060b;
-  background: url('../img/img-banner-home@2x.png');
+
+/*Hero banner home*/
+
+.hero .jumbotron {
+  background: url('../img/home_bg.jpg');
   background-size: cover;
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   background-position: center center;
-<<<<<<< Updated upstream
-  height: 70vh;
+  height: 100vh;
 }
 /*jumbotron used in footer and headers*/
 .jumbotron .display-3 {
   font-size: 60px;
   line-height: 80px;
   color:#fff;
-=======
-  height: 80vh;
->>>>>>> Stashed changes
 }
 
-.home-hero .hero-heading-lg {
-  font-size: 60px;
-  line-height: 86px;
-  font-weight: 300;
-  color: #ffffff;
+.jumbotron .lead {
+  font-size: 19px;
+  line-height: 32px;
+  color: #9B9B9B;
 }
 
-.home-hero .hero-lead-lg {
-	font-size: 19px;
-	line-height: 27px;
-	color: #bdbdbd;
+.btn ,
+.active {
+  transition: .4s;
 }
 
 .vertical-center {
-<<<<<<< Updated upstream
-  min-height: 70%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 70vh; /* These two lines are counted as one :-)       */
-=======
-  min-height: 80%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 80vh; /* These two lines are counted as one :-)       */
->>>>>>> Stashed changes
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
 
   display: flex;
   align-items: center;
 }
 
-<<<<<<< Updated upstream
 .jumbotron .lead a  {
   color: #fff;
   font-weight: 300;
@@ -93,6 +89,15 @@ a {
   max-height: 70vh;
   margin-bottom: 30%;
 }
+
+.project-hero .jumbotron {
+  background: url('../img/home_bg.jpg');
+  background-size: cover;
+  /*background-attachment: fixed;*/
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
 /*Hero banner small*/
 
 .jumbotron .title-small {
@@ -103,37 +108,21 @@ a {
 }
 
 /*projects*/
-=======
-/* PROJECTS */
->>>>>>> Stashed changes
 
 .card {
   border: 0px;
   border-radius: 0px;
   background-color: #000000;
-  padding:2px;
-  margin:0px;
 }
 
 .card-img {
   border-radius: 0px;
-  padding:0px;
-}
-
-.card-feature {
-  padding: 0px;
-
-}
-
-.card-regular {
-  padding: 0px;
 }
 
 .card-title {
   font-size: 20px;
   font-weight: 300;
-  color: #fff
-
+  color: #fff;
 }
 
 .card .card-sub-title {
@@ -142,26 +131,25 @@ a {
   color: #fff;
 }
 
-/* FOOTER */
+/*carousel*/
+
+.carousel-item .full-width {
+  width: 100vw;
+}
+
+/*Footer*/
 
 .footer .jumbotron {
-  background-color: #03060b;
+  background-color: #000b16;
 }
 
 .footer .jumbotron .contact {
-  color: #ffffff;
-  font-weight: 400;
-  font-size: 20px;
-}
-
-.footer .jumbotron .lead-email a {
+  color: #9B9B9B;
   font-weight: 300;
-  font-size: 20px;
-  color: #ffffff;
 }
 
 
 .footer {
-  padding-top: 26px;
-
+  padding-top: 130px;
+  padding-bottom: 130px;
 }
