--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,7 @@ a {
   /*background-attachment: fixed;*/
   background-repeat: no-repeat;
   background-position: center center;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .home-hero .hero-heading-lg {
